+ Removed tab bar control + Group title box now grows when you type into it, but always stays smaller than the width of the group

--- a/content/candies/revision-a/index.html
+++ b/content/candies/revision-a/index.html
@@ -10,13 +10,7 @@
 </head>
 
 <body>
-  <div id="actions">
-    <div id="tabbar-toggle"></div>
-    <!--<a id="tabbar" class="action" href="#">Toggle Tab Bar</a>-->
-  </div>
-  
-<!--   <a href="#" onclick="UI.newTab('', false); return false;">New Tab</a> -->
-  
+  <div id="top-border" />
   <script type="text/javascript;version=1.8">
   </script>
 
