--- a/website/index.html
+++ b/website/index.html
@@ -15,6 +15,7 @@
 		<script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
 		<script type="text/javascript" src="js/jquery.scrollTo.js"></script>
 		<script type="text/javascript" src="js/jquery.fancybox-1.3.1.js"></script>
+		<script type="text/javascript" src="js/showdown.js"></script>		
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script>
     google.load("feeds", "1");
